# ibus-lunispim

./: CMakeLists.txt  Makefile  README.md  lunispim.xml.in
data/ibus-lunispim/icons/: .directory
include/: lunispim_config.h  lunispim_engine.h  lunispim_settings.h
src/: lunispim_engine.c  lunispim_main.c  lunispim_settings.c
