project(ibus-lunispim)
cmake_minimum_required(VERSION 2.8)
include_directories (${PROJECT_SOURCE_DIR}/include)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
include(${CMAKE_ROOT}/Modules/FindPkgConfig.cmake)
pkg_check_modules(IBus REQUIRED ibus-1.0)
if(IBus_FOUND)
  include_directories(${IBus_INCLUDE_DIRS})
  link_directories(${IBus_LIBRARY_DIRS})
endif(IBus_FOUND)

pkg_check_modules(LIBNOTIFY REQUIRED libnotify)
if (LIBNOTIFY_FOUND)
  include_directories(${LIBNOTIFY_INCLUDE_DIRS})
  link_directories(${LIBNOTIFY_LIBRARY_DIRS})
endif(LIBNOTIFY_FOUND)

pkg_check_modules(LUNISPIM REQUIRED liblunispim)
if (LUNISPIM_FOUND)
  include_directories(${LUNISPIM_INCLUDE_DIRS})
  link_directories(${LUNISPIM_LIBRARY_DIRS})
endif(LUNISPIM_FOUND)

set(PREFIX_DIR "${CMAKE_INSTALL_PREFIX}")
set(DATA_INSTALL_DIR "${PREFIX_DIR}/share")
set(LOGO_DIR "${DATA_INSTALL_DIR}")
set(IBUS_COMPONENT_DIR "${PREFIX_DIR}/share/ibus/component")
set(BIN_INSTALL_DIR "${PREFIX_DIR}/bin/ibus-lunispim")
set(IBUS_LUNISPIM_VERSION 0.1)
add_definitions(-DDATA_INSTALL_DIR="${DATA_INSTALL_DIR}")
configure_file(
	${PROJECT_SOURCE_DIR}/lunispim.xml.in
	${PROJECT_BINARY_DIR}/lunispim.xml
	@ONLY)
aux_source_directory(src IBUS_LUNISPIM_SRC)
add_executable(ibus-engine-lunispim ${IBUS_LUNISPIM_SRC})
target_link_libraries(ibus-engine-lunispim ${IBus_LIBRARIES} ${LIBNOTIFY_LIBRARIES} ${LUNISPIM_LIBRARIES})
if(DEFINED DESTDIR)
	install(TARGETS ibus-engine-lunispim RUNTIME DESTINATION ${DESTDIR}${BIN_INSTALL_DIR})
	install(FILES ${PROJECT_BINARY_DIR}/lunispim.xml DESTINATION ${DESTDIR}${IBUS_COMPONENT_DIR})
	install(DIRECTORY ${PROJECT_SOURCE_DIR}/data/ibus-lunispim DESTINATION ${DESTDIR}${DATA_INSTALL_DIR})
else()
	install(TARGETS ibus-engine-lunispim RUNTIME DESTINATION ${BIN_INSTALL_DIR})
	install(FILES ${PROJECT_BINARY_DIR}/lunispim.xml DESTINATION ${IBUS_COMPONENT_DIR})
	install(DIRECTORY ${PROJECT_SOURCE_DIR}/data/ibus-lunispim DESTINATION ${DATA_INSTALL_DIR})
endif()
